[package]
name = "liboo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
base58 = { version = "0.5.1", package = "bs58" }
blake3 = "1.8.2"
clap = { version = "4.5.46", features = ["derive"] }
clap_derive = "4.5.45"
ed25519-dalek = "2.2.0"
futures-lite = "2.6.1"
iroh = "0.91.2"
iroh-base = "0.91.2"
iroh-gossip = "0.91.0"
owo-colors = "4.2.2"
palette = "0.7.6"
postcard = "1.1.3"
rand = "0.8"
rustyline-async = "0.4.7"
serde = "1.0.219"
thiserror = "2.0.16"
tokio = "1.47.1"
